--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>TRANSFORMATIONS</title>
   </head>
   <body>
-    <a href="./pages/2d.html">2D transformations</a>
+    <a href="./2d.html">2D transformations</a>
+    <a href="./3d.html">3D transformations</a>
   </body>
 </html>
