--- a/3d.html
+++ b/3d.html
@@ -125,7 +125,7 @@
             type="submit"
             class="btn btn-dark mb-2"
             id="translate-btn"
-            onclick="display()"
+            onclick="translate()"
           >
             translate
           </button>
