--- a/3d.html
+++ b/3d.html
@@ -88,7 +88,7 @@
             scale
           </button>
         </form>
-        <div id="scale-div" class="box"></div>
+        <div id="scale-div" class="box">SCALE</div>
       </section>
 
       <!-- Translation -->
@@ -125,13 +125,13 @@
             type="submit"
             class="btn btn-dark mb-2"
             id="translate-btn"
-            onclick="translate()"
+            onclick="display()"
           >
             translate
           </button>
         </form>
 
-        <div id="translate-div" class="box"></div>
+        <div id="translate-div" class="box">TRANSLATE</div>
       </section>
 
       <!-- Rotation -->
@@ -181,7 +181,7 @@
             rotate
           </button>
         </form>
-        <div id="rotate-div" class="box"></div>
+        <div id="rotate-div" class="box">ROTATE</div>
       </section>
     </main>
 
