--- a/index.html
+++ b/index.html
@@ -5,9 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>TRANSFORMATIONS</title>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="css/index.min.css" />
   </head>
   <body>
-    <a href="./2d.html">2D transformations</a>
-    <a href="./3d.html">3D transformations</a>
+    <div
+      class="fluid-container d-flex flex-column align-items-center justify-content-center"
+    >
+      <a class="display-3" href="./2d.html">2D transformations</a>
+      <a class="display-3" href="./3d.html">3D transformations</a>
+      <ul class="my-5">
+        <li>Saman Afaq SE-012</li>
+        <li>Zaid Akhter SE-030</li>
+        <li>Sarah Majeed SE-032</li>
+        <li>Halah Nasir SE-036</li>
+      </ul>
+    </div>
   </body>
 </html>
