--- a/3d.html
+++ b/3d.html
@@ -33,8 +33,8 @@
       >
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
+      <div class="collapse navbar-collapse d-flex-md" id="navbarNav">
+        <ul class="navbar-nav flex-grow-1 d-flex-md justify-content-end">
           <li class="nav-item">
             <a class="nav-link" href="#scale">scale</a>
           </li>
